Feta api interna amb mopnitor de les peticions síncrones a PINBAL #94